# mortgage-calculator

./: CLAUDE.md  pyproject.toml
.claude/memory/: MEMORY.md
.github/workflows/: tests.yml
src/mortgage_calculator/: __init__.py  calculator.py  cli.py  comparison.py  gui.py  models.py  tax.py
src/mortgage_calculator/data/: rates.py
tests/: test_calculator.py  test_comparison.py  test_foreign_property.py  test_gui_charts_16.py  test_gui_charts_17.py  test_gui_export_20.py  test_gui_italian_property_19.py  test_gui_panels_18.py
